@@ -1,74 +1,87 @@
 package com.belman.domain.order.photo.policy;
 
 import com.belman.domain.order.ProductDescription;
-import com.belman.domain.order.photo.PhotoAngle;
+import com.belman.domain.order.photo.PhotoTemplate;
 
 import java.util.*;
 
 /**
- * Domain policy that defines photo documentation requirements for different product types.
- * This policy encapsulates business rules about which types of photos are required
- * for specific product categories and types.
+ * Implementation of IPhotoQualityService that defines photo documentation
+ * requirements for different product types based on predefined rules.
+ * <p>
+ * This policy ensures that critical areas such as joints and welds are documented
+ * according to Belman's quality control standards.
  */
-public class ProductPhotoRequirementPolicy {
+public class ProductPhotoRequirementPolicy implements IPhotoQualityService {
 
-    // Map of product categories to required photo angles
-    private static final Map<String, Set<PhotoAngle>> REQUIRED_ANGLES;
+    // Map of product categories to required photo templates
+    private static final Map<String, Set<PhotoTemplate>> REQUIRED_TEMPLATES;
 
     // Map of product categories to minimum number of photos required
-    private static final Map<String, Integer> MINIMUM_PHOTO_COUNT;
+    private static final Map<String, Integer> MINIMUM_PHOTO_COUNTS;
+
+    // Map of product categories to annotation requirements
+    private static final Map<String, Boolean> ANNOTATION_REQUIREMENTS;
 
     static {
-        // Initialize photo angle requirements by product category
-        Map<String, Set<PhotoAngle>> angleMap = new HashMap<>();
-
-        // Standard products require front, left, right, and back photos
-        Set<PhotoAngle> standardAngles = new HashSet<>();
-        standardAngles.add(PhotoAngle.FRONT);
-        standardAngles.add(PhotoAngle.LEFT);
-        standardAngles.add(PhotoAngle.RIGHT);
-        standardAngles.add(PhotoAngle.BACK);
-        angleMap.put("STANDARD", Collections.unmodifiableSet(standardAngles));
-
-        // Simple products only require front and back photos
-        Set<PhotoAngle> simpleAngles = new HashSet<>();
-        simpleAngles.add(PhotoAngle.FRONT);
-        simpleAngles.add(PhotoAngle.BACK);
-        angleMap.put("SIMPLE", Collections.unmodifiableSet(simpleAngles));
-
-        // Complex products require photos from all standard angles plus top and bottom
-        Set<PhotoAngle> complexAngles = new HashSet<>();
-        complexAngles.add(PhotoAngle.FRONT);
-        complexAngles.add(PhotoAngle.LEFT);
-        complexAngles.add(PhotoAngle.RIGHT);
-        complexAngles.add(PhotoAngle.BACK);
-        complexAngles.add(PhotoAngle.TOP);
-        complexAngles.add(PhotoAngle.BOTTOM);
-        angleMap.put("COMPLEX", Collections.unmodifiableSet(complexAngles));
-
-        REQUIRED_ANGLES = Collections.unmodifiableMap(angleMap);
+        // Initialize required photo templates by product category
+        Map<String, Set<PhotoTemplate>> templateMap = new HashMap<>();
+        templateMap.put("STANDARD", Set.of(
+                PhotoTemplate.FRONT_VIEW_OF_ASSEMBLY,
+                PhotoTemplate.SIDE_VIEW_OF_WELD,
+                PhotoTemplate.TOP_VIEW_OF_JOINT,
+                PhotoTemplate.BACK_VIEW_OF_ASSEMBLY
+        ));
+        templateMap.put("SIMPLE", Set.of(
+                PhotoTemplate.FRONT_VIEW_OF_ASSEMBLY,
+                PhotoTemplate.BACK_VIEW_OF_ASSEMBLY
+        ));
+        templateMap.put("COMPLEX", Set.of(
+                PhotoTemplate.FRONT_VIEW_OF_ASSEMBLY,
+                PhotoTemplate.SIDE_VIEW_OF_WELD,
+                PhotoTemplate.TOP_VIEW_OF_JOINT,
+                PhotoTemplate.BOTTOM_VIEW_OF_ASSEMBLY,
+                PhotoTemplate.BACK_VIEW_OF_ASSEMBLY
+        ));
+        templateMap.put("CUSTOM", Set.of(
+                PhotoTemplate.FRONT_VIEW_OF_ASSEMBLY,
+                PhotoTemplate.SIDE_VIEW_OF_WELD,
+                PhotoTemplate.TOP_VIEW_OF_JOINT,
+                PhotoTemplate.BOTTOM_VIEW_OF_ASSEMBLY,
+                PhotoTemplate.BACK_VIEW_OF_ASSEMBLY,
+                PhotoTemplate.CUSTOM
+        ));
+        REQUIRED_TEMPLATES = Collections.unmodifiableMap(templateMap);
 
         // Initialize minimum photo counts by product category
         Map<String, Integer> countMap = new HashMap<>();
         countMap.put("STANDARD", 4);
         countMap.put("SIMPLE", 2);
-        countMap.put("COMPLEX", 6);
-        countMap.put("CUSTOM", 8);
+        countMap.put("COMPLEX", 5);
+        countMap.put("CUSTOM", 6);
+        MINIMUM_PHOTO_COUNTS = Collections.unmodifiableMap(countMap);
 
-        MINIMUM_PHOTO_COUNT = Collections.unmodifiableMap(countMap);
+        // Initialize annotation requirements by product category
+        Map<String, Boolean> annotationMap = new HashMap<>();
+        annotationMap.put("STANDARD", true);
+        annotationMap.put("SIMPLE", false);
+        annotationMap.put("COMPLEX", true);
+        annotationMap.put("CUSTOM", true);
+        ANNOTATION_REQUIREMENTS = Collections.unmodifiableMap(annotationMap);
     }
 
     /**
-     * Gets the required photo angles for a given product.
+     * Gets the required photo templates for a given product.
      *
      * @param productDescription the product to get photo requirements for
-     * @return an unmodifiable set of required photo angles
+     * @return an unmodifiable set of required photo templates
      */
-    public Set<PhotoAngle> getRequiredAngles(ProductDescription productDescription) {
+    @Override
+    public Set<PhotoTemplate> getRequiredTemplates(ProductDescription productDescription) {
         Objects.requireNonNull(productDescription, "productDescription must not be null");
 
         String category = determineProductCategory(productDescription);
-        return REQUIRED_ANGLES.getOrDefault(category, Collections.emptySet());
+        return REQUIRED_TEMPLATES.getOrDefault(category, Collections.emptySet());
     }
 
     /**
@@ -77,11 +90,26 @@ public class ProductPhotoRequirementPolicy {
      * @param productDescription the product to get photo requirements for
      * @return the minimum number of photos required
      */
+    @Override
     public int getMinimumPhotoCount(ProductDescription productDescription) {
         Objects.requireNonNull(productDescription, "productDescription must not be null");
 
         String category = determineProductCategory(productDescription);
-        return MINIMUM_PHOTO_COUNT.getOrDefault(category, 2); // Default to 2 photos minimum
+        return MINIMUM_PHOTO_COUNTS.getOrDefault(category, 2); // Default to 2 photos minimum
+    }
+
+    /**
+     * Determines if annotations are required for photos of a given product.
+     *
+     * @param productDescription the product to check annotation requirements for
+     * @return true if annotations are required, false otherwise
+     */
+    @Override
+    public boolean requiresAnnotations(ProductDescription productDescription) {
+        Objects.requireNonNull(productDescription, "productDescription must not be null");
+
+        String category = determineProductCategory(productDescription);
+        return ANNOTATION_REQUIREMENTS.getOrDefault(category, false);
     }
 
     /**
@@ -92,15 +120,11 @@ public class ProductPhotoRequirementPolicy {
      * @return the product category
      */
     private String determineProductCategory(ProductDescription productDescription) {
-        // In a real implementation, this would examine product attributes
-        // to determine the correct category.
-        // This is a simplified example.
+        String name = productDescription.name().toLowerCase();
+        String specifications = productDescription.specifications().toLowerCase();
+        String notes = productDescription.notes() != null ? productDescription.notes().toLowerCase() : "";
 
-        // Combine name, specifications and notes for categorization
-        String combined = String.join(" ",
-                productDescription.name(),
-                productDescription.specifications(),
-                productDescription.notes() != null ? productDescription.notes() : "").toLowerCase();
+        String combined = name + " " + specifications + " " + notes;
 
         if (combined.contains("custom") || combined.contains("special order")) {
             return "CUSTOM";
